--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,131 @@
+body{
+  font-family: Arial, Helvetica, sans-serif;
 
-
-body {
-  
-  background-image: url(../img/backg.jpg);
-
+ 
 }
 
 
-
-.calculator {
-    display: grid;
-    background: #1b1b1b;
-  
-    width: 320px;
-    height: 600px;
-    margin: 0 auto; 
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    padding: 17px; 
-    justify-content: center
+.button {
+  width: 100px; 
+  height: 100px; 
+ 
 }
 
-
-.buttons {
-
-  align-self: center;
-  justify-self: center;
-  width: 61px;
-  height: 61px;
-  border-radius: 39px;
-  color: #fff;
-  font-size: 26px;
-  font-family: "Lexend Deca";
-  background-color: #545454;
-  transform: scale(1.1);
-  padding: 12px;
-  margin: 9px;
+h1{
+ color: rgb(4, 161, 201);
+ display: block; 
+ text-align: center;
 }
 
+.table {
+  margin: auto; 
+  width: 500px; 
+  border: solid 2px rgb(4, 161, 201);
+ }
 
-.buttons:hover{
-  transition: .2s ease;
-  background: #00aede;
-  border-radius: 39px;
-  color: #fff;
-  transform: scale(1.1);
-
-}
-
-
-
-#display {
-  color: white;
-  font: 40px "Lexend Deca"; 
-  background: grey;
-  grid-column-start: 1;
-  grid-column-end: 5;
-  width: 320px;
-  height: 60px;
-  text-align: right;
-
-}
-
-
-#displayAbove {
+.readButtons {
+  border: solid 2px rgb(4, 161, 201);
+  color: white;; 
+  background-color: white;
   color: black;
-  font: 40px "Lexend Deca"; 
-  background: grey;
-  grid-column-start: 1;
-  grid-column-end: 5;
-  width: 320px;
-  height: 60px;
-  text-align: right;
-  margin-top: 15px; 
+  padding: 16px 20px;
+  cursor: pointer;
+  text-align: center;
+  width: 70px; 
+  height: 45px; 
+display: flex;
+}
 
+.readButtons:hover {
+  background-color: rgb(4, 161, 201); 
+  color: white; 
+}
+
+
+li {
+  display:table;
 }
 
 
 
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  display: block;
+  background-color: rgb(4, 161, 201);
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+  margin: auto; 
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input{
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+
+.form-container input[type = radio]{
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: rgb(160, 134, 185);
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color:rgb(115, 134, 185); 
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
