--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ html {
   font-family: 'Lato', sans-serif;
 	-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: lightpink; 
 }
 
 .banner {
